<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextview"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="@string/unit_converter"
        android:textSize="30sp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="@string/select_category"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/categorySpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="153dp"
        android:layout_height="61dp"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_from"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/fromSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Spinner
        android:id="@+id/fromSpinner"
        android:layout_width="155dp"
        android:layout_height="68dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/categorySpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_to"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/toSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/toSpinner"
        android:layout_width="158dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/fromSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/enterTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_value"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toSpinner" />

    <EditText
        android:id="@+id/enteredValue"
        android:layout_width="136dp"
        android:layout_height="52dp"
        android:hint="@string/number_convert"
        android:inputType="numberDecimal"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@id/enterTextview"
        app:layout_constraintTop_toBottomOf="@id/toSpinner"
         />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="115dp"
        android:layout_height="56dp"
        android:text="@string/convert"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/enteredValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/convertButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>